--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -3,19 +3,43 @@
 @use 'mixins' as mix;
 @use 'typography' as type;
 
+@mixin laptop-style-links {
+  display: flex;
+  flex-direction: row;
+  width: max-content;
+  justify-content: space-between;
+  align-items: center;
+  a {
+    @include mix.nav-link-style(c.$platinum);
+    margin-left: 0.5em;
+    &:hover {
+      color: c.$winter-sky;
+      text-decoration: underline;
+    }
+    @include q.at-least-laptop {
+      margin-left: 2em;
+    }
+  }
+}
+
 .navbar {
   display: grid;
   grid-template-rows: auto auto;
-  grid-template-areas: "header" "hidden-links";
+  grid-template-areas: 'header' 'hidden-links';
   background-color: c.$eerie-black;
   font-family: type.$font-primary;
   padding: 1em;
-  @include q.phone {
-    padding: 0.5em 1em;
-  }
   position: sticky;
   top: 0;
   z-index: 1;
+  @include q.phone {
+    padding: 0.5em 1em;
+  }
+  @include q.at-least-tablet {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
   &__header {
     grid-area: header;
     display: flex;
@@ -27,6 +51,9 @@
     @include q.phone {
       padding: 1em 0;
     }
+    @include q.at-least-tablet {
+      width: 15vw;
+    }
   }
   &__hamburger-btn {
     display: block;
@@ -34,6 +61,9 @@
     margin-left: auto;
     * {
       color: c.$platinum;
+    }
+    @include q.at-least-tablet {
+      display: none;
     }
   }
   &__links {
@@ -46,43 +76,49 @@
     &--hidden {
       display: none;
     }
+    @include q.at-least-tablet {
+      @include laptop-style-links;
+      &--hidden {
+        @include laptop-style-links;
+      }
+    }
   }
   .active {
     color: c.$winter-sky;
   }
 }
-@include q.at-least-tablet {
-  .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    &__links,
-    &__links--hidden {
-      display: flex;
-      flex-direction: row;
-      width: 25vw;
-      justify-content: space-between;
-      align-items: center;
-      a {
-        @include mix.nav-link-style(c.$platinum);
-        &:hover {
-          color: c.$winter-sky;
-          text-decoration: underline;
-        }
-      }
-    }
-    &__hamburger-btn {
-      display: none;
-    }
-  }
-  #nav-links {
-    display: flex;
-  }
-}
-@media screen and (min-width: q.$query-tablet) {
-  .navbar {
-    &__logo {
-      width: 15vw;
-    }
-  }
-}
+// @include q.at-least-tablet {
+//   .navbar {
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+//     &__links,
+//     &__links--hidden {
+//       display: flex;
+//       flex-direction: row;
+//       width: 25vw;
+//       justify-content: space-between;
+//       align-items: center;
+//       a {
+//         @include mix.nav-link-style(c.$platinum);
+//         &:hover {
+//           color: c.$winter-sky;
+//           text-decoration: underline;
+//         }
+//       }
+//     }
+//     &__hamburger-btn {
+//       display: none;
+//     }
+//   }
+//   #nav-links {
+//     display: flex;
+//   }
+// }
+// @media screen and (min-width: q.$query-tablet) {
+//   .navbar {
+//     &__logo {
+//       width: 15vw;
+//     }
+//   }
+// }
